TINY-2325: Fixed the autocompleter not wrapping in IE 11

--- a/src/less/theme/alien/unknowns.less
+++ b/src/less/theme/alien/unknowns.less
@@ -243,6 +243,10 @@
     max-width: 25em;
   }
 
+  .tox-autocompleter .tox-menu {
+    max-width: 25em;
+  }
+
   // Do we want a focus style for disabled buttons?
   .tox-collection__item.tox-collection__item--state-disabled.tox-collection__item--active {
     background-color: @collection-item-active-background-color;
